Correct docs [ci skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -501,7 +501,7 @@
 %     \item[\texttt{dict}] Key--value pairs in the form
 %       \texttt{/\meta{key} \meta{value}}
 %     \item[\texttt{fstream}] Two brace groups: \meta{content} and
-%       \meta{additional attributes}
+%       \meta{file name}
 %     \item[\texttt{stream}] Two brace groups: \meta{content} and
 %       \meta{additional attributes}
 %   \end{itemize}
