Rename some penalties
Shouldn't be public, I think

--- a/l3experimental/xmarks/xmarks.dtx
+++ b/l3experimental/xmarks/xmarks.dtx
@@ -605,12 +605,12 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{variable}{\c_marks_OR_i_penalty, \c_marks_OR_ii_penalty}
+% \begin{variable}{\c_@@_penaltyi_int, \c_@@_penaltyii_int}
 %   Two marker penalties for detected that the restore system is used
 %   correctly.
 %    \begin{macrocode}
-\int_const:Nn \c_marks_OR_i_penalty  { -20 203 }
-\int_const:Nn \c_marks_OR_ii_penalty { -20 204 }
+\int_const:Nn \c_@@_penaltyi_int  { -20 203 }
+\int_const:Nn \c_@@_penaltyii_int { -20 204 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -650,24 +650,24 @@
       { restoring~botmark~ \@@_trace_store:N \g_@@_last_prop }
 %</trace>
     \@@_store:N \g_@@_last_prop
-    \tex_penalty:D \c_marks_OR_i_penalty
+    \tex_penalty:D \c_@@_penaltyi_int
     \tex_global:D \tex_output:D
       {
 %<*trace>
         \trace_push:n { marks_restore_state~(inline~code~arg1) }
 %</trace>
-        \int_compare:nNnF \c_marks_OR_i_penalty = \tex_outputpenalty:D
+        \int_compare:nNnF \c_@@_penaltyi_int = \tex_outputpenalty:D
           { \__kernel_msg_error:nn { marks } { bad-restore } }
         \box_gclear:N \c_two_hundred_fifty_five
         \tex_hbox:D { }
-        \tex_penalty:D \c_marks_OR_ii_penalty
+        \tex_penalty:D \c_@@_penaltyii_int
         #1
         \tex_global:D \tex_output:D
           {
 %<*trace>
             \trace_push:n { marks_restore_state~(inline~code~arg2) }
 %</trace>
-            \int_compare:nNnF \c_marks_OR_ii_penalty = \tex_outputpenalty:D
+            \int_compare:nNnF \c_@@_penaltyii_int = \tex_outputpenalty:D
               { \__kernel_msg_error:nn { marks } { bad-restore } }
             \box_gclear:N \c_two_hundred_fifty_five
             #2
