--- a/l3experimental/xmarks/xmarks.dtx
+++ b/l3experimental/xmarks/xmarks.dtx
@@ -291,7 +291,7 @@
   {
     \seq_if_in:NnTF \g_@@_types_seq {#1}
       {
-        \__kernel_msg_kernel_error:nnn { marks } { type-already-defined }
+        \__kernel_msg_error:nnn { marks } { type-already-defined }
           {#1}
       }
       { \@@_new:n {#1} }
