Replace some _tmp_ variables by _internal_

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -667,6 +667,13 @@
 %
 % \subsubsection{Variables and constants}
 %
+% \begin{variable}{\l_@@_internal_tl}
+%   Used as a short-term scratch variable.
+%    \begin{macrocode}
+\tl_new:N  \l_@@_internal_tl
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{variable}{\c_term_ior}
 %   Reading from the terminal (with a prompt) is done using a positive
 %   but non-existent stream number. Unlike writing, there is no concept
@@ -955,7 +962,6 @@
 % \begin{macro}{\@@_map_inline:NNn}
 % \begin{macro}{\@@_map_inline:NNNn}
 % \begin{macro}{\@@_map_inline_loop:NNN}
-% \begin{variable}{\l_@@_internal_tl}
 %   Mapping to an input stream can be done on either a token or a string
 %   basis, hence the set up. Within that, there is a check to avoid reading
 %   past the end of a file, hence the two applications of \cs{ior_if_eof:N}.
@@ -988,9 +994,7 @@
         \@@_map_inline_loop:NNN #1#2#3
       }
   }
-\tl_new:N  \l_@@_internal_tl
 %    \end{macrocode}
-% \end{variable}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -1865,6 +1869,13 @@
 %
 % \subsection{File operations}
 %
+% \begin{variable}{\l_@@_internal_tl}
+%   Used as a short-term scratch variable.
+%    \begin{macrocode}
+\tl_new:N \l_@@_internal_tl
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{variable}{\g_@@_internal_ior}
 %   A reserved stream to test for file existence.
 %    \begin{macrocode}
@@ -1952,13 +1963,6 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_tmp_tl}
-%   Used as a short-term scratch variable.
-%    \begin{macrocode}
-\tl_new:N \l_@@_tmp_tl
-%    \end{macrocode}
-% \end{variable}
-%
 % \begin{variable}{\l_@@_base_name_str, \l_@@_full_name_str}
 %   For storing the basename and full path whilst passing data internally.
 %    \begin{macrocode}
@@ -2007,14 +2011,14 @@
     \group_begin:
       \seq_map_inline:Nn \l_char_active_seq
         {
-          \tl_set:Nx \l_@@_tmp_tl { \iow_char:N ##1 }
-          \char_set_active_eq:NN ##1 \l_@@_tmp_tl
+          \tl_set:Nx \l_@@_internal_tl { \iow_char:N ##1 }
+          \char_set_active_eq:NN ##1 \l_@@_internal_tl
         }
-      \tl_set:Nx \l_@@_tmp_tl {#1}
-      \tl_set:Nx \l_@@_tmp_tl
-        { \tl_to_str:N \l_@@_tmp_tl }
+      \tl_set:Nx \l_@@_internal_tl {#1}
+      \tl_set:Nx \l_@@_internal_tl
+        { \tl_to_str:N \l_@@_internal_tl }
     \exp_args:NNNV \group_end:
-    \str_set:Nn #2 \l_@@_tmp_tl
+    \str_set:Nn #2 \l_@@_internal_tl
   }
 \cs_new_protected:Npn \@@_name_quote:nN #1#2
   {
@@ -2174,8 +2178,8 @@
 %</package>
 \cs_new_protected:Npn \@@_input_pop:
   {
-    \seq_gpop:NN \g_@@_stack_seq \l_@@_tmp_tl
-    \exp_after:wN \@@_input_pop:nnn \l_@@_tmp_tl
+    \seq_gpop:NN \g_@@_stack_seq \l_@@_internal_tl
+    \exp_after:wN \@@_input_pop:nnn \l_@@_internal_tl
   }
 %<*package>
 \cs_new_eq:NN \__kernel_file_input_pop: \__file_input_pop:
